src/test/deca/context/valid/SansObjet/DeclVar-Plus-float-int-int.deca
// Description:
//    Declaration of a float variable using + operation between a int variable and int .
// 
// Results:
//     nothing
// 
// Historique: 
//    cree le 11/01/2022 

{
    int x =  10; 
    int y = 5; 
    float z = x + y ; 
}
