src/test/deca/context/invalid/SansObjet/DeclVar-Or-int-float-float.deca
// Description:
//    Declaration of a int variable using || operation between a float variable and float .
// 
// Results:
//     Contextual error
//     Line 14: (RULE 3.33) Illegal operand type.
// 
// Historique: 
//    cree le 11/01/2022 

{
    float x =  10.01; 
    float y = 3.14; 
    int z = 10.01 || 3.14; 
}
